# torrentx

./: .gitignore  Cargo.toml  LICENSE  README.md  Screencast_20260223_212551.webm  build-appimage.sh  build_torrentx.py
src/: app.rs  config.rs  main.rs  rss.rs  search.rs  theme.rs  types.rs  utils.rs
src/ui/: about_tab.rs  components.rs  detail_panel.rs  favorites_tab.rs  filter_bar.rs  header.rs  mod.rs  results_table.rs  rss_tab.rs  search_tab.rs  settings.rs  status_bar.rs  toasts.rs
