[package]
name = "torrentx"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "torrentx"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.27", features = ["default"] }
egui = "0.27"
egui_extras = { version = "0.27", features = ["default"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
open = "5.1"
dirs-next = "2.0"
url = "2.5"

[profile.release]
opt-level = 3
lto = true
strip = true