[package]
name = "torrentx"
version = "7.0.0"
edition = "2021"

[[bin]]
name = "torrentx"
path = "src/main.rs"

[dependencies]
eframe        = "0.27"
egui_extras   = { version = "0.27", features = ["all_loaders"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
reqwest       = { version = "0.11", features = ["blocking", "json"] }
chrono        = { version = "0.4", features = ["serde"] }
dirs-next     = "2"
open          = "5"
quick-xml     = "0.31"

[profile.release]
opt-level     = 3
lto           = true
strip         = true
codegen-units = 1
